fix navbar color

--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ html, body {
   }
 }
 .navbar-default {
-  background-color: #B69A75;
+  background-color: #B69A75 !important;
 }
 .navbar-default .navbar-nav > li > a {
   color: white;
